--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,9 @@ spring.mvc.static-path-pattern=/static/**
 #             MyBatis配置              #
 #######################################
 #mybatis
-#mybatis.type-aliases-package=com.orange.pojo
-#mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.orange.base.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+
 #mappers 多个接口时逗号隔开
 #mapper.mappers=tk.mybatis.springboot.util.MyMapper
 #mapper.not-empty=false
@@ -38,21 +39,27 @@ spring.mvc.static-path-pattern=/static/**
 spring.datasource.url=jdbc:mysql://localhost:3306/dev?serverTimezone=GMT&characterEncoding=utf-8
 spring.datasource.username=orange
 spring.datasource.password=orange
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.initial-size=1
-spring.datasource.druid.min-idle=1
-spring.datasource.druid.max-active=20
-spring.datasource.druid.test-on-borrow=true
-spring.datasource.druid.stat-view-servlet.allow=true
+spring.datasource.dbcp2.initial-size=1
+spring.datasource.dbcp2.min-idle=1
+spring.datasource.dbcp2.max-idle=10
+spring.datasource.dbcp2.test-while-idle=true
+spring.datasource.dbcp2.max-wait-millis=60000
+#spring.datasource.druid.initial-size=1
+#spring.datasource.druid.min-idle=1
+#spring.datasource.druid.max-active=20
+#spring.datasource.druid.test-on-borrow=true
+#spring.datasource.druid.stat-view-servlet.allow=true
 
 
 #######################################
-#           pagehelper配置             #
+#           pageHelper配置             #
 #######################################
-#pagehelper.helperDialect=mysql
-#pagehelper.reasonable=true
-#pagehelper.supportMethodsArguments=true
-#pagehelper.params-count=countSql
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 
 #######################################
